[package]
name = "mococli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chronoutil = "0.2.3"
clap = { version = "3", features = ["derive"] }
config = "0.13"
derive_more = "0"
dirs = "4"
env_logger = "0.9"
log = "0.4"
now = "0"
num-traits = "0.2.15"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
