[package]
name = "mococli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
chronoutil = "0.2.7"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.24"
derive_more = { version = "2.1.1", features = ["display"] }
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.31"
now = "0.1.3"
num-traits = "0.2.19"
reqwest = { version = "0.13.4", features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
