[package]
name = "mococli"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
clap = { version = "4", features = ["derive"] }
config = "0"
derive_more = { version = "2", features = ["display"] }
dirs = "6"
unicode-ellipsis = "0"
env_logger = "0"
log = "0"
now = "0"
num-traits = "0"
owo-colors = "4"
reqwest = { version = "0", features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tabled = { version = "0.21.0", features = ["ansi"] }
constcat = "0.6.1"
